--- a/configure.in
+++ b/configure.in
@@ -1,89 +1,79 @@
-AC_INIT(Race Into Space,0.3,k6mmc@users.sourceforge.net,raceintospace)
+dnl ===========================
+dnl === Initialize autoconf ===
+dnl ===========================
 
-dnl Specify directory for local macros
+AC_INIT(Race Into Space,0.3,mkmccarty@raceintospace.org,raceintospace)
+
 AC_CONFIG_MACRO_DIR([m4])
 
 ACLOCAL="$ACLOCAL -I m4 $ACLOCAL_FLAGS"
 
-AC_ARG_ENABLE(theora_video,
-	AC_HELP_STRING([--enable-theora-video],
-		[enable support for theora-encoded video files]),
-		theora_video=$enableval
-)
+dnl ==========================
+dnl === Check for programs ===
+dnl ==========================
 
 AC_PROG_CC
-AC_C_INLINE
-AC_C_CONST
-AC_C_BIGENDIAN(AC_DEFINE([__BIG_ENDIAN__]))
 
-AC_TYPE_SIZE_T
-AC_TYPE_SSIZE_T
+dnl ===========================
+dnl === Check for libraries ===
+dnl ===========================
 
 AC_CHECK_LIB(m,main)
 
-dnl ----------------
 dnl Check for SDL
-dnl ----------------
 
 dnl FIXME: what exact version is enough???
 AM_PATH_SDL(1.2.0,:,
 	AC_MSG_ERROR([[*** SDL library is required ***]]))
 
-dnl ---------------------------
-dnl Check for OGG and friends
-dnl ---------------------------
+dnl OGG and friends
 
-XIPH_PATH_OGG(
-	[
-		have_ogg=yes
-		AC_DEFINE([HAVE_LIBOGG])
-	],
-	have_ogg=no)
-AC_SUBST(have_ogg)
+XIPH_PATH_OGG(,
+	AC_MSG_ERROR([[*** Ogg library is required ***]]))
 
-XIPH_PATH_VORBIS(
-	[
-		have_vorbis=yes
-		AC_DEFINE([HAVE_LIBVORBIS])
-	],
-	have_vorbis=no)
-AC_SUBST(have_vorbis)
+XIPH_PATH_VORBIS(,
+	AC_MSG_ERROR([[*** Vorbis library is required ***]]))
 
 AC_CHECK_LIB(theora,main,
 	[
-		AC_DEFINE([HAVE_LIBTHEORA])
-		have_theora=yes
-		[LIBS]="-ltheora $LIBS"
+	 	[LIBS]="-ltheora $LIBS"
 	],
-	have_theora=no)
-AC_SUBST(have_theora)
+	AC_MSG_ERROR([[*** Theora library is required ***]]))
 
-dnl We'll drop that dependency shortly
-AC_CHECK_LIB(vorbisfile,main,
-	[
-		have_vorbisfile=yes
-		AC_DEFINE([HAVE_LIBVORBISFILE])
-	],
-	have_vorbisfile=no)
-AC_SUBST(have_vorbisfile)
+dnl ==============================
+dnl === Check for header files ===
+dnl ==============================
 
-if test "x$have_vorbis" = xyes -a \
-	"x$have_vorbis" = xyes -a \
-	"x$have_theora" = xyes -a \
-	"x$theora_video" = xyes
-then
-	AC_DEFINE([CONFIG_THEORA_VIDEO])
-else
-	if test "x$theora_video" = xyes ; then
-		AC_MSG_WARN(
-			[[*** theora video unavailable, using old frm files ***]]
-		)
-	fi
-	theora_video=no
-fi
-AC_SUBST(theora_video)
+AC_HEADER_DIRENT
+
+dnl =======================
+dnl === Check for types ===
+dnl =======================
+
+AC_TYPE_SIZE_T
+AC_TYPE_SSIZE_T
 
 AX_CREATE_STDINT_H(int_types.h)
+
+dnl ==========================
+dnl === Check for compiler ===
+dnl ==========================
+
+AC_C_INLINE
+AC_C_CONST
+AC_C_BIGENDIAN(
+   AC_DEFINE([__BIG_ENDIAN__], 1,
+			 [Define to 1 if building for big endian machine.]))
+
+dnl ===========================
+dnl === Check for functions ===
+dnl ===========================
+
+AC_FUNC_MKDIR
+
+dnl =============================
+dnl === Check system services ===
+dnl =============================
 
 dnl Get the operating system and version number...
 uname=`uname`
@@ -92,8 +82,9 @@ dnl cross-compile specific configuration
 case "$host" in
 i?86-mingw32msvc)
 	dnl Windows/CygWin configuration
-	dnl LIBS="`i386-mingw32msvc-sdl-config --libs` $LIBS"
-	dnl PROG_NAME=raceintospace.exe
+	AC_DEFINE([CONFIG_WIN32], 1,
+			  [Define to 1 if building for win32 platform.])
+	build_win=yes
 	;;
 *)
 	dnl Everyone else
@@ -102,24 +93,34 @@ i?86-mingw32msvc)
 	;;
 esac
 
-case "$uname" in
-Darwin)
-	dnl Darwin/Mac OS X configuration
-	AC_DEFINE([CONFIG_MACOSX])
-	;;
-Linux)
-	dnl Linux OS
-	;;
-CYGWIN*)
-	dnl Cygwin
-	dnl CYGWIN already defines __CYGWIN__
-	;;
-*)
-	dnl unknown system
-	;;
-esac
+dnl XXX: this gives the build configuration, not host configuration!
+if test -z "$build_win" ; then
+	case "$uname" in
+	Darwin)
+		dnl Darwin/Mac OS X configuration
+		AC_DEFINE([CONFIG_MACOSX], 1,
+				  [Define to 1 if building for Mac OS X.])
+		;;
+	Linux)
+		AC_DEFINE([CONFIG_LINUX], 1,
+				  [Define to 1 if building for Linux])
+		;;
+	CYGWIN*)
+		dnl Cygwin
+		dnl CYGWIN already defines __CYGWIN__
+		;;
+	*)
+		dnl unknown system
+		;;
+	esac
+fi
 
-AC_SUBST(PROG_NAME)
+dnl =================================
+dnl === Write configuration files ===
+dnl =================================
 
 AC_CONFIG_HEADER(race.h)
+if test -n "$build_win" ; then 
+	AC_CONFIG_FILES(installer.nsi, chmod a-w installer.nsi)
+fi
 AC_OUTPUT(Makefile, chmod a-w Makefile race.h)
