2007-02-20  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net> 	* V134 	* Wrote AUTHORS, rewrote DEVELOPER, README 	* Some fixes for tar rules and windows installer.

--- a/Makefile.in
+++ b/Makefile.in
@@ -37,10 +37,13 @@ EXTRA_WARNINGS =  -Wextra -Wno-unused-parameter \
 PROGS = $(addsuffix @EXEEXT@, \
 	imgsplit vtest decode getport getvab mtest sdltest vtest2)
 
-EXTRA_SOURCES = README COPYING DEVELOPER ChangeLog \
-				raceintospace.1 \
-				configure Makefile.in Makefile race.h.in \
-				m4
+EXTRA_SOURCES = AUTHORS README COPYING DEVELOPER TODO ChangeLog \
+				raceintospace.6 \
+				configure Makefile.in race.h.in \
+				$(shell ls m4/*.m4) \
+				$(shell find os_macosx -name CVS -prune -o -type f -print) \
+				os_win32/configure.mingw os_win32/Shuttle.ico \
+				os_win32/installer.nsi.in os_win32/Makefile.os
 
 BARIS_HFILES = av.h Buzz_inc.h data.h endianness.h externs.h gamedata.h \
 	int_types.h macros.h mis.h music.h pace.h proto.h records.h soundfx.h \
@@ -146,7 +149,7 @@ tar: $(EXTRA_SOURCES)
 	rm -f $(TAR_NAME).tar*
 	rm -rf .temp
 	mkdir -p .temp/$(TAR_NAME)
-	(cd .temp/$(TAR_NAME) && ln -s $(addprefix ../../,*.[ch] $(EXTRA_SOURCES)) ./)
+	cp -l --parents *.[ch] $(EXTRA_SOURCES) .temp/${TAR_NAME}
 	tar -zchC .temp --exclude CVS -f $(TAR_NAME).tar.gz $(TAR_NAME)
 
 datatar:
