--- a/Makefile.in
+++ b/Makefile.in
@@ -137,6 +137,7 @@ distclean: clean
 	rm -f int_types.h race.h
 	rm -f configure
 	rm -rf autom4te.cache
+	rm -f aclocal.m4
 
 configure: configure.in $(wildcard m4/*.m4)
 	-aclocal $(ACLOCAL_FLAGS)
