2007-02-24  Pace Willisson  <pace@rhino.pacew.com>
	* V140

	* bring rpm building up to date

	* one of the main ideas is that a simple "make; make install" on
	Linux style systems puts stuff under /usr/local, but the make that
	happens inside the rpm building process uses /usr

	* here are the main changes:

	* add DESTDIR to makefile which allows "make install" to install
	into a different tree than the program is compiled to run under

	* configure doesn't set @docdir@, so make the docdir Makefile
	variable go under ${datadir}; similarly, configure doesn't set
	@datarootdir@, so use ${datadir} for that too;

--- a/.cvsignore
+++ b/.cvsignore
@@ -17,7 +17,6 @@ sdltest
 *.hex
 TMP
 raceintospace
-raceintospace.tar.gz
 autom4te.cache
 config.log
 config.status
@@ -26,3 +25,8 @@ race.h
 .DS_Store
 cscope.out
 .*.swp
+.temp
+Makefile
+aclocal.m4
+int_types.h
+*.tar.gz
