--- a/Makefile.in
+++ b/Makefile.in
@@ -49,14 +49,14 @@ EXTRA_SOURCES = AUTHORS README COPYING DEVELOPER TODO ChangeLog \
 
 BARIS_HFILES = av.h Buzz_inc.h data.h endianness.h externs.h gamedata.h \
 	int_types.h macros.h mis.h music.h pace.h proto.h records.h soundfx.h \
-	soundint.h mmfile.h options.h fs.h utils.h
+	soundint.h mmfile.h options.h fs.h utils.h log4c.h logging.h
 
 BARIS_OBJS = $(addsuffix .@OBJEXT@, \
 	admin aimast aimis aipur ast0 ast1 ast2 ast3 ast4 budget crew endgame \
 	endianness futbub future hardef intel intro main mc2 mc mis_c mis_m museum \
 	newmis news news_sup news_suq place port prefs prest radar rdplex records \
 	replay review rush start vab pace gx gr sdl music gamedata mmfile options fs \
-	utils \
+	utils logging log4c log_default \
 )
 
 all: $(PROG_NAME)
