2007-07-20  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net> 	* V170 	* Bumped up version to 0.4.5 	* gx.c (gxDisplayVirtual): bugfix 	* Makefile.in: include new images data directory 	* raceintospace.spec.in: changed descriptions (please check) 	* os_win32/installer.nsi.in: update to current version, change icon

--- a/Makefile.in
+++ b/Makefile.in
@@ -160,11 +160,11 @@ tar: $(EXTRA_SOURCES)
 
 datatar:
 	rm -f $(PACKAGE_TARNAME)-data.tar.gz
-	tar -czhvf ${PACKAGE_TARNAME}-data.tar.gz audio video gamedata
+	tar -czhvf ${PACKAGE_TARNAME}-data.tar.gz audio video gamedata images
 
 datazip:
 	rm -f $(PACKAGE_TARNAME)-data.zip
-	zip -r ${PACKAGE_TARNAME}-data.zip audio video gamedata
+	zip -r ${PACKAGE_TARNAME}-data.zip audio video gamedata images
 
 # Personal Makefile
 -include Makefile.$(LOGNAME)
