--- a/os_win32/installer.nsi.in
+++ b/os_win32/installer.nsi.in
@@ -75,23 +75,24 @@ Section "Dummy Section" SecDummy
   File AUTHORS.txt
   File COPYING.txt
   ;Icon
-  File Shuttle.ico
+  File Moon.ico
   ;Data files
   File /r ${DATA_DIR}\audio
   File /r ${DATA_DIR}\video
   File /r ${DATA_DIR}\gamedata
+  File /r ${DATA_DIR}\images
 
   CreateShortCut "$INSTDIR\${PTARNAME}.lnk" \
   		"$INSTDIR\${PTARNAME}.exe" \
 		'"BARIS_DATA=$INSTDIR"' \
-		"$INSTDIR\Shuttle.ico" \
+		"$INSTDIR\Moon.ico" \
 		0 \
 		SW_SHOWNORMAL
   
   CreateShortCut "$DESKTOP\${PNAME}.lnk" \
   		"$INSTDIR\${PTARNAME}.exe" \
 		'"BARIS_DATA=$INSTDIR"' \
-		"$INSTDIR\Shuttle.ico" \
+		"$INSTDIR\Moon.ico" \
 		0 \
 		SW_SHOWNORMAL
   
@@ -127,7 +128,7 @@ Section "Uninstall"
   Delete "$INSTDIR\*.dll"
   Delete "$INSTDIR\${PTARNAME}.exe"
   Delete "$INSTDIR\${PTARNAME}.lnk"
-  Delete "$INSTDIR\Shuttle.ico"
+  Delete "$INSTDIR\Moon.ico"
   ;SDL creates these, we don't want them to float around.
   Delete "$INSTDIR\stdout.txt"
   Delete "$INSTDIR\stderr.txt"
