2007-07-20  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net> 	* V171 	* os_win32/installer.nsi.in: one missing change

--- a/os_win32/installer.nsi.in
+++ b/os_win32/installer.nsi.in
@@ -136,6 +136,7 @@ Section "Uninstall"
   RMDir /r "$INSTDIR\gamedata"
   RMDir /r "$INSTDIR\audio"
   RMDir /r "$INSTDIR\video"
+  RMDir /r "$INSTDIR\images"
   RMDir "$INSTDIR"
 
   DeleteRegKey /ifempty HKCU "Software\${PNAME}"
