--- a/os_macosx/MacPorts/games/raceintospace/Portfile
+++ b/os_macosx/MacPorts/games/raceintospace/Portfile
@@ -1,4 +1,4 @@
-# $Id: Portfile,v 1.2 2007/07/30 17:32:00 k6mmc Exp $
+# $Id: Portfile,v 1.3 2007/07/30 17:37:15 k6mmc Exp $
 
 PortSystem 1.0
 
@@ -6,7 +6,7 @@ name		raceintospace
 version		0.4.5
 categories	games
 platforms	darwin
-maintainers	nomaintainer@macports.org
+maintainers	mkmccarty@raceintospace.org
 
 description	Open Source version of old MS-DOS game Buzz Aldrin's Race Into Space
 long_description	${description}
