2007-08-07  Will Glynn <will@lerjfhax.com> 	* V175 	* os_macosx: Re-worked OS X port: now builds straight from Xcode 	(longer dependent on autoconf), supports Fink and DarwinPorts, uses 	Cocoa to bootstrap SDL, embeds the data files inside the .app, and has 	a build target to generate a .dmg for distribution 	* AUTHORS: added self 	* DEVELOPER: updated OS X instructions 	* getport.c: added cast on xmalloc 	* gx.c: added extern reference to * screen 	* main.c: added externs.h, removed declaration of palette, and changed 	normal exit code to EXIT_SUCCESS 	* sdl.c: removed SDL icon calls under OS X, define surfaces in 	multiples of MAX_X/MAX_Y

--- a/os_macosx/Info.plist
+++ b/os_macosx/Info.plist
@@ -9,9 +9,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>RaceIntoSpace</string>
+	<string>moon</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.RaceIntoSpaceProject.RaceIntoSpace</string>
+	<string>org.raceintospace.RaceIntoSpace</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
