--- a/Makefile.in
+++ b/Makefile.in
@@ -56,7 +56,7 @@ BARIS_OBJS = $(addsuffix .@OBJEXT@, \
 	admin aimast aimis aipur ast0 ast1 ast2 ast3 ast4 budget crew endgame \
 	endianness futbub future hardef intel intro main mc2 mc mis_c mis_m museum \
 	newmis news news_sup news_suq place port prefs prest radar rdplex records \
-	replay review rush start vab pace gx gr sdl music gamedata mmfile options fs \
+	replay review rush start vab pace gx gr sdl music_vorbis gamedata mmfile options fs \
 	utils logging log4c log_default \
 )
 
