2007-08-31  Fabian S. <fabguy@users.sourceforge.net> 	* V189 	* Doxyfile.extended, Doxyfile.quick: new files for documentation 	  generation 	* AUTHORS, DEVELOPER, PLAN, QUESTIONS, README, TODO, WHO_SPOT: 	  transformed to doxygen style pages 	* Makefile.in: introduced "doc" and "extendeddoc" targets

--- a/Makefile.in
+++ b/Makefile.in
@@ -152,6 +152,16 @@ configure: configure.in $(wildcard m4/*.m4)
 	-aclocal $(ACLOCAL_FLAGS)
 	autoconf
 
+doc: Doxyfile.quick
+	-rm Doxyfile
+	cp Doxyfile.quick Doxyfile
+	doxygen
+
+extendeddoc: Doxyfile.extended
+	-rm Doxyfile
+	cp Doxyfile.extended Doxyfile
+	doxygen
+
 race.h.in: configure.in
 	autoheader
 
