2007-09-03  Fabian S. <fabguy@users.sourceforge.net> 	* V190 	* Doxyfile.extended, Doxyfile.quick: doc/ will be a dir in the current tree 	* sdl.c, pace.c, replay.c: minimal documentation 	* Makefile.in: added PHONY-targets 	* DEVELOPER: changed back to more plain text, added section about CVS committing

--- a/Makefile.in
+++ b/Makefile.in
@@ -60,6 +60,8 @@ BARIS_OBJS = $(addsuffix .@OBJEXT@, \
 	utils logging log4c log_default \
 )
 
+.PHONY: clean doc extendeddoc
+
 all: $(PROG_NAME)
 
 extra: all $(PROGS)
