2010-06-22	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net> 	* V237 	* Recent gcc versions deprecate -I- (used from win32 cross compilation). 	Work around this and change all includes to use <> instead of "".

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,8 +1,9 @@
 # @configure_input@
 
 CC=@CC@
+CROSS=@CROSS@
 LIBS=@LIBS@ @OGG_LIBS@ @VORBIS_LIBS@ @THEORA_LIBS@ @SDL_LIBS@
-CPPFLAGS=@CPPFLAGS@ @OGG_CFLAGS@ @VORBIS_CFLAGS@ @THEORA_CFLAGS@ \
+CPPFLAGS=@CPPFLAGS@ -I. @OGG_CFLAGS@ @VORBIS_CFLAGS@ @THEORA_CFLAGS@ \
 		 @SDL_CFLAGS@ -DCONFIG_DATADIR=\"${DATA_DIR}\"
 PACKAGE_TARNAME=@PACKAGE_TARNAME@
 VERSION=@PACKAGE_VERSION@
